Contract tests of consumer with kafka