@@ -19,30 +19,20 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '3.0.2'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier:4.0.0'
+    testImplementation 'org.testcontainers:spock:1.17.6'
+    testImplementation 'org.testcontainers:kafka:1.17.6'
+    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner:4.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.rest-assured:rest-assured:5.3.0'
     testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
     testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
     testImplementation 'org.apache.groovy:groovy-all:4.0.6'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-contracts {
-    testFramework = "SPOCK"
-    baseClassForTests = "com.rmaciak.payment.BaseContractTestsSpec"
-//    testMode = "EXPLICIT"
-}
-
-contractTest {
-    useJUnitPlatform()
-    testLogging {
-        exceptionFormat = 'full'
-    }
 }
 
 test {
@@ -55,4 +45,19 @@ publishing {
             artifact verifierStubsJar
         }
     }
+}
+
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
 }
